# usage-limits

./: .agents  .envrc  .gitignore  AGENTS.md  AGENTS.md.orig  PLAN.md  PLAN.md.orig  README.md  README.md.orig  SDL.md  justfile  pyproject.toml  test_codex_auth.py  test_codex_url.py  test_pty.py  test_run.py  usage-limits-sink.service  vulture_whitelist.py
.config/usage-limits/: config.toml
.github/: FUNDING.yml
.github/workflows/: check.yml  publish.yml
.pr/: PR_BODY.md
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
docs/: NEW_PROVIDERS.md  OPENCHAMBER_ALIGNMENT.md  openrouter.md
scripts/: bar_colors.py
src/usage_limits/: __init__.py  __main__.py  base.py  cli.py  config.py  contracts.py  doctor.py  registry.py  rendering.py  server.py  storage.py  table.py
src/usage_limits/auth/: login.py  migrate.py  oauth.py  store.py
src/usage_limits/providers/: __init__.py  agy_secret.py  amp.py  antigravity.py  claude.py  codex.py  copilot.py  cursor.py  deepseek.py  gemini.py  kiro.py  ollama.py  opencode.py  openrouter.py  qoder.py  qwen.py  trae.py  windsurf.py
tests/: test_agy_secret.py  test_antigravity.py  test_base.py  test_caching.py  test_claude.py  test_cli.py  test_codex.py  test_contracts.py  test_copilot.py  test_cursor.py  test_deepseek.py  test_gemini.py  test_gemini_provider.py  test_kiro.py  test_login_wizard.py  test_oauth.py  test_ollama.py  test_opencode.py  test_openrouter_provider.py  test_qoder.py  test_qwen_provider.py  test_registry.py  test_rendering.py  test_server.py  test_store.py  test_table.py  test_trae.py  test_windsurf.py
tests/fixtures/: antigravity-quota-multi.json  antigravity-quota-summary-permodel.json  antigravity-quota-summary-pooled.json  antigravity-quota.json  claude_response.json  copilot-usage.json  cursor-usage.json  gemini-quota.json  kiro-usage.json  ollama-settings.html  opencode-go-promo.html  opencode-go.html  qoder-usage.json  trae-usage.json  windsurf-usage.json
