[project]
name = "usage-limits"
version = "1.0.0"
description = "Usage limit checkers for AI provider free tiers"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.28",
    "rich>=13.0",
    "beautifulsoup4>=4.12",
    "typer>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-requests>=2.32",
]

[project.scripts]
usage-limits      = "usage_limits.cli:app"
usage-claude      = "usage_limits.cli:claude_main"
usage-codex       = "usage_limits.cli:codex_main"
usage-amp         = "usage_limits.cli:amp_main"
usage-antigravity = "usage_limits.cli:antigravity_main"
usage-openrouter  = "usage_limits.cli:openrouter_main"
usage-qwen        = "usage_limits.cli:qwen_main"
usage-ollama      = "usage_limits.cli:ollama_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usage_limits"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
