[project]
name = "usage-limits"
version = "1.0.3"
description = "Uniform quota collection for LLM providers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "dzackgarza" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "requests>=2.28",
    "rich>=13.0",
    "beautifulsoup4>=4.12",
    "typer>=0.21",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "opentelemetry-proto>=1.40.0",
]

[project.urls]
Sponsor = "https://ko-fi.com/I2I57UKJ8"
Repository = "https://github.com/dzackgarza/usage-limits.git"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-requests>=2.32",
    "httpx>=0.28.1",
]

[project.scripts]
usage-limits      = "usage_limits.cli:app"
usage-claude      = "usage_limits.cli:claude_main"
usage-codex       = "usage_limits.cli:codex_main"
usage-amp         = "usage_limits.cli:amp_main"
usage-antigravity = "usage_limits.cli:antigravity_main"
usage-openrouter  = "usage_limits.cli:openrouter_main"
usage-qwen        = "usage_limits.cli:qwen_main"
usage-ollama      = "usage_limits.cli:ollama_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usage_limits"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
